Name:                logging-streams
Version:             0.1
License:             BSD3
License-file:        LICENSE
Category:            Data
Build-type:          Simple
Cabal-version:       >= 1.10
Synopsis:            Logging primitives using io-streams.
Description:         Types and definitions for logging using io-streams.

Extra-Source-Files:  CONTRIBUTORS

------------------------------------------------------------------------------
Library
  hs-source-dirs:    src
  Default-language:  Haskell2010

  ghc-options:       -O2 -Wall -fwarn-tabs -funbox-strict-fields -threaded
                     -fno-warn-unused-do-bind
  ghc-prof-options:  -prof -auto-all

  Exposed-modules:   System.IO.Streams.Logging,
                     System.IO.Streams.Logging.Deferred,
                     System.IO.Streams.Logging.File,
                     System.IO.Streams.Logging.Handle,
                     System.IO.Streams.Logging.Types

  Build-depends:     base          >= 4     && <5,
                     blaze-builder >= 0.3.1 && <0.4,
                     bytestring    >= 0.9.2 && <0.11,
                     io-streams    >= 0.1   && <0.2,
                     text          >= 0.9   && <0.12,
                     time          >= 1.4   && <1.5

  other-extensions:
    BangPatterns,
    CPP,
    DeriveDataTypeable,
    GeneralizedNewtypeDeriving,
    OverloadedStrings

------------------------------------------------------------------------------
Test-suite testsuite
  Type:              exitcode-stdio-1.0
  hs-source-dirs:    src test
  Main-is:           TestSuite.hs
  Default-language:  Haskell2010

  ghc-options:       -O2 -Wall -fhpc -fwarn-tabs -funbox-strict-fields -threaded
                     -fno-warn-unused-do-bind
  ghc-prof-options:  -prof -auto-all

  Build-depends:     base          >= 4     && <5,
                     blaze-builder >= 0.3.1 && <0.4,
                     bytestring    >= 0.9.2 && <0.11,
                     deepseq       >= 1.2   && <1.4,
                     io-streams    >= 0.1   && <0.2,
                     time          >= 1.4   && <1.5,

                     HUnit                      >= 1.2      && <2,
                     QuickCheck                 >= 2.3.0.2  && <3,
                     test-framework             >= 0.6      && <0.7,
                     test-framework-hunit       >= 0.2.7    && <0.3,
                     test-framework-quickcheck2 >= 0.2.12.1 && <0.3

  other-extensions:
    BangPatterns,
    CPP,
    DeriveDataTypeable,
    FlexibleInstances,
    GeneralizedNewtypeDeriving,
    OverloadedStrings,
    ScopedTypeVariables
